--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,3 +34,5 @@ dependencies {
     compile "com.github.bumptech.glide:glide:$rootProject.ext.glideVersion"
     compile "org.greenrobot:eventbus:$rootProject.ext.eventbusVersion"
 }
+
+apply plugin: 'com.google.gms.google-services'
